[metadata]
name = Genshi
version = 0.7.7
description = A toolkit for generation of output for the web
long_description =
    Genshi is a Python library that provides an integrated set of
    components for parsing, generating, and processing HTML, XML or
    other textual content for output generation on the web. The major
    feature is a template language, which is heavily inspired by Kid.
author = Edgewall Software
author_email = info@edgewall.org
license = BSD
license_files = COPYING
url = https://github.com/edgewall/genshi
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: XML
keywords =
    python.templating.engines

[options]
# include tests for python3 setup.py test (needed when creating
# source distributions on python2 too so that they work on python3)
packages =
    genshi
    genshi.filters
    genshi.template
    genshi.tests
    genshi.filters.tests
    genshi.template.tests
    genshi.template.tests.templates
install_requires =
    six

[options.entry_points]
babel.extractors =
    genshi = genshi.filters.i18n:extract[i18n]
python.templating.engines =
    genshi = genshi.template.plugin:MarkupTemplateEnginePlugin[plugin]
    genshi-markup = genshi.template.plugin:MarkupTemplateEnginePlugin[plugin]
    genshi-text = genshi.template.plugin:TextTemplateEnginePlugin[plugin]

[options.extras_require]
i18n = Babel>=0.8
plugin = setuptools>=0.6a2
